# heterogeneous-tree

./: CMakeLists.txt  README.md
include/tree_lib/: tree.hpp  tree_helpers.hpp  tree_node.hpp  tree_visitors.hpp
samples/: sample_input.txt  sample_output.txt
src/tree_lib/: demo.cpp
